# speech2text-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: audio.py  main.py
src/core/: .env.example  __init__.py  config.py
src/handlers/: __init__.py  audio_message.py  help.py  start.py  video_message.py
src/services/: audio.py  video.py
src/templates/: help.j2  start.j2
src/utils/: template.py
