[tool.poetry]
name = "speechtotextofficial"
version = "0.1.0"
description = ""
authors = ["ivan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.17.0"
faster-whisper = "^1.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
